appId: com.recettesdumonde.app.dev
---
- launchApp
- tapOn: "Recherche"
- tapOn:
    id: "Rechercher par ingrédient"
- inputText: "tomate"
- assertVisible: "Facile"
